js262/test/language/module-code/parse-err-decl-pos-export-while.js


/*---
description: Statement cannot contain an `export` declaration
esid: sec-modules
negative:
  phase: parse
  type: SyntaxError
flags: [module]
---*/

$DONOTEVALUATE();

while (false) export default null;
